- add Modular-admin-html UI set - change home page template to new UI

--- a/views/templates/Modules/index.html
+++ b/views/templates/Modules/index.html
@@ -43,18 +43,18 @@
                         </form>
                     </div>
                     <div class="header-block header-block-buttons">
-                        <!--<a href="https://github.com/modularcode/modular-admin-html" class="btn btn-sm header-btn">-->
-                            <!--<i class="fa fa-github-alt"></i>-->
-                            <!--<span>View on GitHub</span>-->
-                        <!--</a>-->
-                        <!--<a href="https://github.com/modularcode/modular-admin-html/stargazers" class="btn btn-sm header-btn">-->
-                            <!--<i class="fa fa-star"></i>-->
-                            <!--<span>Star Us</span>-->
-                        <!--</a>-->
-                        <!--<a href="https://github.com/modularcode/modular-admin-html/releases/download/v1.1.1/modular-admin-html-1.1.1.zip" class="btn btn-sm header-btn">-->
-                            <!--<i class="fa fa-cloud-download"></i>-->
-                            <!--<span>Download .zip</span>-->
-                        <!--</a>-->
+                        <a href="https://github.com/modularcode/modular-admin-html" class="btn btn-sm header-btn">
+                            <i class="fa fa-github-alt"></i>
+                            <span>View on GitHub</span>
+                        </a>
+                        <a href="https://github.com/modularcode/modular-admin-html/stargazers" class="btn btn-sm header-btn">
+                            <i class="fa fa-star"></i>
+                            <span>Star Us</span>
+                        </a>
+                        <a href="https://github.com/modularcode/modular-admin-html/releases/download/v1.1.1/modular-admin-html-1.1.1.zip" class="btn btn-sm header-btn">
+                            <i class="fa fa-cloud-download"></i>
+                            <span>Download .zip</span>
+                        </a>
                     </div>
                     <div class="header-block header-block-nav">
                         <ul class="nav-profile">
@@ -117,7 +117,7 @@
                             <li class="profile dropdown">
                                 <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">
                                     <div class="img" style="background-image: url('https://avatars3.githubusercontent.com/u/3959008?v=3&s=40')"> </div>
-                                    <span class="name"> Huang Xiao </span>
+                                    <span class="name"> John Doe </span>
                                 </a>
                                 <div class="dropdown-menu profile-dropdown-menu" aria-labelledby="dropdownMenu1">
                                     <a class="dropdown-item" href="#">
@@ -139,13 +139,12 @@
                         <div class="sidebar-header">
                             <div class="brand">
                                 <div class="logo">
-                                    <!--<span class="l l1"></span>-->
-                                    <!--<span class="l l2"></span>-->
-                                    <!--<span class="l l3"></span>-->
-                                    <!--<span class="l l4"></span>-->
-                                    <!--<span class="l l5"></span>-->
-                                    <img src="assets/baota.png" alt="" style="width: 50px; margin-top: -60px; margin-left: -10px;">
-                                </div> Baota Intelligence</div>
+                                    <span class="l l1"></span>
+                                    <span class="l l2"></span>
+                                    <span class="l l3"></span>
+                                    <span class="l l4"></span>
+                                    <span class="l l5"></span>
+                                </div> Modular Admin </div>
                         </div>
                         <nav class="menu">
                             <ul class="nav metismenu" id="sidebar-menu">
