--- a/views/templates/reset.html
+++ b/views/templates/reset.html
@@ -19,34 +19,26 @@
                             </div> Baota Intelligence </h1>
                     </header>
                     <div class="auth-content">
-                        <p class="text-xs-center">LOGIN TO CONTINUE</p>
-                        <form id="login-form" action="/index.html" method="GET" novalidate="">
+                        <p class="text-xs-center">PASSWORD RECOVER</p>
+                        <p class="text-muted text-xs-center">
+                            <small>Enter your email address to recover your password.</small>
+                        </p>
+                        <form id="reset-form" action="/index.html" method="GET" novalidate="">
                             <div class="form-group">
-                                <label for="username">Username</label>
-                                <input type="email" class="form-control underlined" name="username" id="username" placeholder="Your email address" required> </div>
+                                <label for="email1">Email</label>
+                                <input type="email" class="form-control underlined" name="email1" id="email1" placeholder="Your email address" required> </div>
                             <div class="form-group">
-                                <label for="password">Password</label>
-                                <input type="password" class="form-control underlined" name="password" id="password" placeholder="Your password" required> </div>
-                            <div class="form-group">
-                                <label for="remember">
-                                    <input class="checkbox" id="remember" type="checkbox">
-                                    <span>Remember me</span>
-                                </label>
-                                <a href="reset.html" class="forgot-btn pull-right">Forgot password?</a>
+                                <button type="submit" class="btn btn-block btn-primary">Reset</button>
                             </div>
-                            <div class="form-group">
-                                <button type="submit" class="btn btn-block btn-primary">Login</button>
-                            </div>
-                            <div class="form-group">
-                                <p class="text-muted text-xs-center">Do not have an account?
-                                    <a href="signup.html">Sign Up!</a>
-                                </p>
+                            <div class="form-group clearfix">
+                                <a class="pull-left" href="login.html">return to Login</a>
+                                <a class="pull-right" href="signup.html">Sign Up!</a>
                             </div>
                         </form>
                     </div>
                 </div>
                 <div class="text-xs-center">
-                    <a href="/" class="btn btn-secondary rounded btn-sm">
+                    <a href="index.html" class="btn btn-secondary rounded btn-sm">
                         <i class="fa fa-arrow-left"></i> Back to dashboard </a>
                 </div>
             </div>
