--- a/views/templates/BayesNet/index.html
+++ b/views/templates/BayesNet/index.html
@@ -1,68 +1,76 @@
-<!DOCTYPE html>
-<html>
-
-    <head>
-        <script src="http://code.jquery.com/jquery-2.0.3.min.js"></script>
-        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
-        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS" crossorigin="anonymous"></script>
-        <!-- bokeh.js -->
-        <!--<link href="http://cdn.pydata.org/bokeh/release/bokeh-0.12.0.min.css" rel="stylesheet" type="text/css">-->
-        <!--<link href="http://cdn.pydata.org/bokeh/release/bokeh-widgets-0.12.0.min.css" rel="stylesheet" type="text/css">-->
-        <!--<script src="http://cdn.pydata.org/bokeh/release/bokeh-0.12.0.min.js"></script>-->
-        <!--<script src="http://cdn.pydata.org/bokeh/release/bokeh-widgets-0.12.0.min.js"></script>-->
-
-        <!-- my own resource -->
-        <link href="/bayesnet/static/css/style.css" rel="stylesheet">
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/cytoscape/3.1.3/cytoscape.js"></script>
-        <script src="/bayesnet/static/js/bayesnet_draw.js"></script>
-    </head>
-        <!-- bokeh plot script -->
-        <!--{{ bokeh_script}}-->
-
-        <body>
-            <nav class="navbar navbar-default navbar-fixed-top">
-                <div class="container-fluid">
-                    <div class="navbar-header">
-                        <a class="navbar-brand" href="/">
-                            <p>Cognuts - Copula Bayesian Networks</p>
-                        </a>
-                    </div>
-                    <form class="navbar-form pull-right" role="search">
-                        <div class="form-group">
-                            <div class="input-group">
-                                <input id="watch_word_input" type="text" class="form-control" placeholder="search word...">
-                                <span class="input-group-btn">
-                                    <button id="search_similar_btn" class="btn btn-default">
-                                        <span class="glyphicon glyphicon-search"></span>
-                                    </button>
-                                </span>
-                            </div>
+{% extends "base.html" %}
+{% block head %}
+    {% include "elements/_head.html" %}
+    <script src="http://code.jquery.com/jquery-2.0.3.min.js"></script>
+    <!-- bokeh.js -->
+    <!--<link href="http://cdn.pydata.org/bokeh/release/bokeh-0.12.0.min.css" rel="stylesheet" type="text/css">-->
+    <!--<link href="http://cdn.pydata.org/bokeh/release/bokeh-widgets-0.12.0.min.css" rel="stylesheet" type="text/css">-->
+    <!--<script src="http://cdn.pydata.org/bokeh/release/bokeh-0.12.0.min.js"></script>-->
+    <!--<script src="http://cdn.pydata.org/bokeh/release/bokeh-widgets-0.12.0.min.js"></script>-->
+    <!-- my own resource -->
+    <link href="css/style.css" rel="stylesheet">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/cytoscape/3.1.3/cytoscape.js"></script>
+    <script src="js/bayesnet_draw.js"></script>
+{% endblock %}
+{% block header %}
+    {% include "elements/_header.html" %}
+{% endblock %}
+{% block sidebar %}
+    {% include "elements/_sidebar.html" %}
+{% endblock %}
+{% block sidebar_footer %}
+    {% include "elements/_sidebar_footer.html" %}
+{% endblock %}
+{% block footer %}
+    {% include "elements/_footer.html" %}
+{% endblock %}
+{% block content %}
+<section class="section">
+        <div class="row sameheight-container">
+            <!-- website statistics -->
+            <div class="col col-xs-12 col-sm-12 col-md-6 col-xl-5 stats-col">
+                <div class="card sameheight-item stats" data-exclude="xs">
+                    <div class="card-block">
+                        <div class="title-block">
+                            <h4 class="title"> Dataset Overview </h4>
+                            <p class="title-description">
+                                Uploaded file ...
+                            </p>
                         </div>
-                    </form>
-                </div>
-            </nav>
-            <div class="container-fluid">
-                <div class="row">
-                    <div class="col-md-12">
-                        <form id="file_upload" role="acttype" method="post" action="#" enctype="multipart/form-data">
-                            <fieldset class="form-group">
-                                <label for="upload_input"><span class="glyphicon glyphicon-open"></span> Upload Your .csv File</label>
-                                <input type="file" accept=".csv" class="btn btn-secondary" id="upload_input">
-                            </fieldset>
-                            <div class="btn-group">
-                                <button id="bnt_explore" class="btn btn-success btn-left"><span class="glyphicon glyphicon-search" aria-hidden="true"></span> Explore </button>
+                        <div class="row row-sm stats-container">
+                            <div class="col-xs-12 col-sm-12 stat-col">
+                                <form id="file_upload" role="acttype" method="post" action="#" enctype="multipart/form-data">
+                                    <fieldset class="form-group">
+                                        <label for="upload_input"><span class="glyphicon glyphicon-open"></span> Upload Your .csv File</label>
+                                        <input type="file" accept=".csv" class="btn btn-secondary" id="upload_input">
+                                    </fieldset>
+                                    <div class="btn-group">
+                                        <button id="bnt_explore" class="btn btn-success btn-left"><span class="glyphicon glyphicon-search" aria-hidden="true"></span> Explore </button>
+                                    </div>
+                                </form>
                             </div>
-                        </form>
-                    </div>
-                </div>
-                <hr>
-                <div class="row">
-                    <div class="col-md-12">
-                        <div id="graph_canvas" data-elements="{{ cy_obj }}">
-                            <!-- put Bayes net here -->
                         </div>
                     </div>
                 </div>
             </div>
-        </body>
-</html>
+            <!-- Request history -->
+            <div class="col col-xs-12 col-sm-12 col-md-6 col-xl-7 history-col">
+                <div class="card sameheight-item" data-exclude="xs">
+                    <div class="card-header card-header-sm bordered">
+                        <div class="header-block">
+                            <h3 class="title">Causal Graph</h3>
+                        </div>
+                    </div>
+                    <div class="card-block">
+                        <div class="tab-content">
+                            <div role="tabpanel" class="tab-pane active fade in" id="requests">
+                                <p class="title-description"> Causal Graph </p>
+                                <div id="graph_canvas"></div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+{% endblock %}
