--- a/views/templates/elements/_sidebar.html
+++ b/views/templates/elements/_sidebar.html
@@ -6,8 +6,12 @@
             <!--<span class="l l3"></span>-->
             <!--<span class="l l4"></span>-->
             <!--<span class="l l5"></span>-->
-            <img src="assets/baota.png" alt="" style="width: 50px; margin-top: -60px; margin-left: -10px;">
-        </div> Baota Intelligence</div>
+            <a href="/">
+                <img src="assets/baota.png" alt="" style="width: 50px; margin-top: -60px; margin-left: -10px;">
+            </a>
+        </div>
+        Cognuts Security
+    </div>
 </div>
 <nav class="menu">
     <ul class="nav metismenu" id="sidebar-menu">
