- update cognuts logo

--- a/views/templates/elements/_sidebar.html
+++ b/views/templates/elements/_sidebar.html
@@ -7,7 +7,7 @@
             <!--<span class="l l4"></span>-->
             <!--<span class="l l5"></span>-->
             <a href="/">
-                <img src="assets/baota.png" alt="" style="width: 50px; margin-top: -60px; margin-left: -10px;">
+                <img src="assets/logo.png" alt="" style="width: 45px; margin-top: -50px; margin-left: -10px;">
             </a>
         </div>
         Cognuts Security
