basic signup database works

--- a/views/templates/login.html
+++ b/views/templates/login.html
@@ -39,7 +39,7 @@
                             </div>
                             <div class="form-group">
                                 <p class="text-muted text-xs-center">Do not have an account?
-                                    <a href="signup.html">Sign Up!</a>
+                                    <a href="/signup">Sign Up!</a>
                                 </p>
                             </div>
                         </form>
