--- a/views/templates/signup.html
+++ b/views/templates/signup.html
@@ -15,19 +15,19 @@
                                     <!--<span class="l l3"></span>-->
                                     <!--<span class="l l4"></span>-->
                                     <!--<span class="l l5"></span>-->
-                                    <img src="assets/baota.png" alt="" style="width: 50px; margin-top: -60px; margin-left: -10px;">
-                            </div> Baota Intelligence </h1>
+                                    <img src="assets/logo.png" alt="" style="width: 40px; margin-top: -20px; margin-left: 0px;">
+                            </div> Cognuts Intelligence </h1>
                     </header>
                     <div class="auth-content">
                         <p class="text-xs-center">SIGNUP TO GET INSTANT ACCESS</p>
-                        <form id="signup-form" action="/index.html" method="GET" novalidate="">
+                        <form id="signup-form" action="/register" method="POST" novalidate="">
                             <div class="form-group">
-                                <label for="firstname">Name</label>
+                                <label for="uname">User Name</label>
                                 <div class="row">
-                                    <div class="col-sm-6">
-                                        <input type="text" class="form-control underlined" name="firstname" id="firstname" placeholder="Enter firstname" required=""> </div>
-                                    <div class="col-sm-6">
-                                        <input type="text" class="form-control underlined" name="lastname" id="lastname" placeholder="Enter lastname" required=""> </div>
+                                    <!--<div class="col-sm-6">-->
+                                        <!--<input type="text" class="form-control underlined" name="firstname" id="firstname" placeholder="Enter firstname" required=""> </div>-->
+                                    <div class="col-sm-12">
+                                        <input type="text" class="form-control underlined" name="uname" id="uname" placeholder="Enter Username" required=""> </div>
                                 </div>
                             </div>
                             <div class="form-group">
@@ -55,7 +55,7 @@
                             </div>
                             <div class="form-group">
                                 <p class="text-muted text-xs-center">Already have an account?
-                                    <a href="login.html">Login!</a>
+                                    <a href="/login">Login!</a>
                                 </p>
                             </div>
                         </form>
