--- a/views/templates/elements/_header.html
+++ b/views/templates/elements/_header.html
@@ -97,7 +97,7 @@
                 <a class="dropdown-item" href="#">
                     <i class="fa fa-gear icon"></i> Settings </a>
                 <div class="dropdown-divider"></div>
-                <a class="dropdown-item" href="login.html">
+                <a class="dropdown-item" href="/login">
                     <i class="fa fa-power-off icon"></i> Logout </a>
             </div>
         </li>
