- authentication works - register/login

--- a/views/templates/login.html
+++ b/views/templates/login.html
@@ -15,15 +15,15 @@
                                     <!--<span class="l l3"></span>-->
                                     <!--<span class="l l4"></span>-->
                                     <!--<span class="l l5"></span>-->
-                                    <img src="assets/baota.png" alt="" style="width: 50px; margin-top: -60px; margin-left: -10px;">
-                            </div> Baota Intelligence </h1>
+                                    <img src="/assets/logo.png" alt="" style="width: 40px; margin-top: -20px; margin-left: 0px;">
+                            </div> Cognuts Intelligence </h1>
                     </header>
                     <div class="auth-content">
                         <p class="text-xs-center">LOGIN TO CONTINUE</p>
-                        <form id="login-form" action="/index.html" method="GET" novalidate="">
+                        <form id="login-form" action="/auth/do_auth" method="POST" novalidate="">
                             <div class="form-group">
                                 <label for="username">Username</label>
-                                <input type="email" class="form-control underlined" name="username" id="username" placeholder="Your email address" required> </div>
+                                <input type="text" class="form-control underlined" name="username" id="username" placeholder="Your Username" required> </div>
                             <div class="form-group">
                                 <label for="password">Password</label>
                                 <input type="password" class="form-control underlined" name="password" id="password" placeholder="Your password" required> </div>
@@ -32,14 +32,14 @@
                                     <input class="checkbox" id="remember" type="checkbox">
                                     <span>Remember me</span>
                                 </label>
-                                <a href="reset.html" class="forgot-btn pull-right">Forgot password?</a>
+                                <a href="/auth/reset" class="forgot-btn pull-right">Forgot password?</a>
                             </div>
                             <div class="form-group">
                                 <button type="submit" class="btn btn-block btn-primary">Login</button>
                             </div>
                             <div class="form-group">
                                 <p class="text-muted text-xs-center">Do not have an account?
-                                    <a href="/signup">Sign Up!</a>
+                                    <a href="/auth/signup">Sign Up!</a>
                                 </p>
                             </div>
                         </form>
