--- a/views/templates/elements/_head.html
+++ b/views/templates/elements/_head.html
@@ -5,7 +5,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="apple-touch-icon" href="apple-touch-icon.png">
 <!-- Place favicon.ico in the root directory -->
-<link rel="stylesheet" href="css/vendor.css">
+<link rel="stylesheet" href="/css/vendor.css">
 <!-- Theme initialization -->
 <script>
     var themeSettings = (localStorage.getItem('themeSettings')) ? JSON.parse(localStorage.getItem('themeSettings')) :
@@ -13,10 +13,10 @@
     var themeName = themeSettings.themeName || '';
     if (themeName)
     {
-        document.write('<link rel="stylesheet" id="theme-style" href="css/app-' + themeName + '.css">');
+        document.write('<link rel="stylesheet" id="theme-style" href="/css/app-' + themeName + '.css">');
     }
     else
     {
-        document.write('<link rel="stylesheet" id="theme-style" href="css/app.css">');
+        document.write('<link rel="stylesheet" id="theme-style" href="/css/app.css">');
     }
 </script>
