--- a/views/templates/elements/_header.html
+++ b/views/templates/elements/_header.html
@@ -85,21 +85,28 @@
             </div>
         </li>
         <li class="profile dropdown">
-            <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">
-                <div class="img" style="background-image: url('https://avatars3.githubusercontent.com/u/3959008?v=3&s=40')"> </div>
-                <span class="name"> Huang Xiao </span>
-            </a>
-            <div class="dropdown-menu profile-dropdown-menu" aria-labelledby="dropdownMenu1">
-                <a class="dropdown-item" href="#">
-                    <i class="fa fa-user icon"></i> Profile </a>
-                <a class="dropdown-item" href="#">
-                    <i class="fa fa-bell icon"></i> Notifications </a>
-                <a class="dropdown-item" href="#">
-                    <i class="fa fa-gear icon"></i> Settings </a>
-                <div class="dropdown-divider"></div>
-                <a class="dropdown-item" href="/login">
-                    <i class="fa fa-power-off icon"></i> Logout </a>
-            </div>
+            {% if logged_user %}
+                <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">
+                    <div class="img" style="background-image: url('https://avatars3.githubusercontent.com/u/3959008?v=3&s=40')"> </div>
+                    <span class="name"> Hello, {{ logged_user }} </span>
+                </a>
+                <div class="dropdown-menu profile-dropdown-menu" aria-labelledby="dropdownMenu1">
+                    <a class="dropdown-item" href="#">
+                        <i class="fa fa-user icon"></i> Profile </a>
+                    <a class="dropdown-item" href="#">
+                        <i class="fa fa-bell icon"></i> Notifications </a>
+                    <a class="dropdown-item" href="#">
+                        <i class="fa fa-gear icon"></i> Settings </a>
+                    <div class="dropdown-divider"></div>
+                    <a class="dropdown-item" href="/auth/login">
+                        <i class="fa fa-power-off icon"></i> Logout </a>
+                </div>
+            {% else %}
+                <a class="nav-link" href="/auth/login" role="button" aria-haspopup="true" aria-expanded="false">
+                    <span class="name"> Sign In </span>
+                </a>
+            {% endif %}
+
         </li>
     </ul>
 </div>
