--- a/views/templates/reset.html
+++ b/views/templates/reset.html
@@ -15,7 +15,7 @@
                                     <!--<span class="l l3"></span>-->
                                     <!--<span class="l l4"></span>-->
                                     <!--<span class="l l5"></span>-->
-                                    <img src="assets/baota.png" alt="" style="width: 50px; margin-top: -60px; margin-left: -10px;">
+                                    <img src="/assets/baota.png" alt="" style="width: 50px; margin-top: -60px; margin-left: -10px;">
                             </div> Baota Intelligence </h1>
                     </header>
                     <div class="auth-content">
@@ -23,7 +23,7 @@
                         <p class="text-muted text-xs-center">
                             <small>Enter your email address to recover your password.</small>
                         </p>
-                        <form id="reset-form" action="/index.html" method="GET" novalidate="">
+                        <form id="reset-form" action="/renewpassword" method="POST" novalidate="">
                             <div class="form-group">
                                 <label for="email1">Email</label>
                                 <input type="email" class="form-control underlined" name="email1" id="email1" placeholder="Your email address" required> </div>
@@ -31,14 +31,14 @@
                                 <button type="submit" class="btn btn-block btn-primary">Reset</button>
                             </div>
                             <div class="form-group clearfix">
-                                <a class="pull-left" href="login.html">return to Login</a>
-                                <a class="pull-right" href="signup.html">Sign Up!</a>
+                                <a class="pull-left" href="/auth/login">return to Login</a>
+                                <a class="pull-right" href="/auth/signup">Sign Up!</a>
                             </div>
                         </form>
                     </div>
                 </div>
                 <div class="text-xs-center">
-                    <a href="index.html" class="btn btn-secondary rounded btn-sm">
+                    <a href="/" class="btn btn-secondary rounded btn-sm">
                         <i class="fa fa-arrow-left"></i> Back to dashboard </a>
                 </div>
             </div>
