--- a/views/templates/signup.html
+++ b/views/templates/signup.html
@@ -15,12 +15,12 @@
                                     <!--<span class="l l3"></span>-->
                                     <!--<span class="l l4"></span>-->
                                     <!--<span class="l l5"></span>-->
-                                    <img src="assets/logo.png" alt="" style="width: 40px; margin-top: -20px; margin-left: 0px;">
+                                    <img src="/assets/logo.png" alt="" style="width: 40px; margin-top: -20px; margin-left: 0px;">
                             </div> Cognuts Intelligence </h1>
                     </header>
                     <div class="auth-content">
                         <p class="text-xs-center">SIGNUP TO GET INSTANT ACCESS</p>
-                        <form id="signup-form" action="/register" method="POST" novalidate="">
+                        <form id="signup-form" action="/auth/register" method="POST" novalidate="">
                             <div class="form-group">
                                 <label for="uname">User Name</label>
                                 <div class="row">
@@ -55,7 +55,7 @@
                             </div>
                             <div class="form-group">
                                 <p class="text-muted text-xs-center">Already have an account?
-                                    <a href="/login">Login!</a>
+                                    <a href="/auth/login">Login!</a>
                                 </p>
                             </div>
                         </form>
