- add UI for inventorymanager

--- a/views/templates/Home/index.html
+++ b/views/templates/Home/index.html
@@ -16,6 +16,7 @@
 {% endblock %}
 {% block content %}
     <!-- {% include "elements/_content_test.html" %} -->
+<article class="content dashboard-page">
     <section class="section">
         <div class="row sameheight-container">
             <!-- website statistics -->
@@ -121,6 +122,7 @@
             </div>
         </div>
     </section>
+</article>
 {% endblock %}
 {% block modal_media %}
     {% include "elements/_modal_media.html" %}
