--- a/views/templates/elements/_sidebar.html
+++ b/views/templates/elements/_sidebar.html
@@ -34,6 +34,20 @@
         </li>
         <li>
             <a href="">
+                <i class="fa fa-cube"></i> Inventory Manager
+                <i class="fa arrow"></i>
+            </a>
+            <ul>
+                <li>
+                    <a href="/inventory/datasets"> Data Inventory </a>
+                </li>
+                <li>
+                    <a href="/inventory/checkpoints"> Checkpoints </a>
+                </li>
+            </ul>
+        </li>
+        <!-- <li>
+            <a href="">
                 <i class="fa fa-bar-chart"></i> Charts
                 <i class="fa arrow"></i>
             </a>
@@ -45,8 +59,8 @@
                     <a href="Modules/charts-morris.html"> Morris Charts </a>
                 </li>
             </ul>
-        </li>
-        <li>
+        </li> -->
+        <!-- <li>
             <a href="">
                 <i class="fa fa-table"></i> Tables
                 <i class="fa arrow"></i>
@@ -59,8 +73,8 @@
                     <a href="responsive-tables.html"> Responsive Tables </a>
                 </li>
             </ul>
-        </li>
-        <li>
+        </li> -->
+        <!-- <li>
             <a href="forms.html">
                 <i class="fa fa-pencil-square-o"></i> Forms </a>
         </li>
@@ -86,8 +100,8 @@
                     <a href="grid.html"> Grid </a>
                 </li>
             </ul>
-        </li>
-        <li>
+        </li> -->
+        <!-- <li>
             <a href="">
                 <i class="fa fa-file-text-o"></i> Pages
                 <i class="fa arrow"></i>
@@ -115,7 +129,7 @@
                     <a href="error-500-alt.html"> Error 500 Global </a>
                 </li>
             </ul>
-        </li>
+        </li> -->
         <li>
             <a href="https://github.com/modularcode/modular-admin-html">
                 <i class="fa fa-github-alt"></i> Theme Docs </a>
