--- a/views/templates/BayesNet/index.html
+++ b/views/templates/BayesNet/index.html
@@ -1,31 +1,32 @@
 {% extends "base.html" %}
 {% block head %}
-    {% include "elements/_head.html" %}
-    <script src="http://code.jquery.com/jquery-2.0.3.min.js"></script>
-    <!-- bokeh.js -->
-    <!--<link href="http://cdn.pydata.org/bokeh/release/bokeh-0.12.0.min.css" rel="stylesheet" type="text/css">-->
-    <!--<link href="http://cdn.pydata.org/bokeh/release/bokeh-widgets-0.12.0.min.css" rel="stylesheet" type="text/css">-->
-    <!--<script src="http://cdn.pydata.org/bokeh/release/bokeh-0.12.0.min.js"></script>-->
-    <!--<script src="http://cdn.pydata.org/bokeh/release/bokeh-widgets-0.12.0.min.js"></script>-->
-    <!-- my own resource -->
-    <link href="css/style.css" rel="stylesheet">
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/cytoscape/3.1.3/cytoscape.js"></script>
-    <script src="js/bayesnet_draw.js"></script>
+{% include "elements/_head.html" %}
+<script src="http://code.jquery.com/jquery-2.0.3.min.js"></script>
+<!-- bokeh.js -->
+<!--<link href="http://cdn.pydata.org/bokeh/release/bokeh-0.12.0.min.css" rel="stylesheet" type="text/css">-->
+<!--<link href="http://cdn.pydata.org/bokeh/release/bokeh-widgets-0.12.0.min.css" rel="stylesheet" type="text/css">-->
+<!--<script src="http://cdn.pydata.org/bokeh/release/bokeh-0.12.0.min.js"></script>-->
+<!--<script src="http://cdn.pydata.org/bokeh/release/bokeh-widgets-0.12.0.min.js"></script>-->
+<!-- my own resource -->
+<link href="css/style.css" rel="stylesheet">
+<script src="https://cdnjs.cloudflare.com/ajax/libs/cytoscape/3.1.3/cytoscape.js"></script>
+<script src="js/bayesnet_draw.js"></script>
 {% endblock %}
 {% block header %}
-    {% include "elements/_header.html" %}
+{% include "elements/_header.html" %}
 {% endblock %}
 {% block sidebar %}
-    {% include "elements/_sidebar.html" %}
+{% include "elements/_sidebar.html" %}
 {% endblock %}
 {% block sidebar_footer %}
-    {% include "elements/_sidebar_footer.html" %}
+{% include "elements/_sidebar_footer.html" %}
 {% endblock %}
 {% block footer %}
-    {% include "elements/_footer.html" %}
+{% include "elements/_footer.html" %}
 {% endblock %}
 {% block content %}
-<section class="section">
+<article class="content">
+    <section class="section">
         <div class="row sameheight-container">
             <!-- website statistics -->
             <div class="col col-xs-12 col-sm-12 col-md-6 col-xl-5 stats-col">
@@ -39,13 +40,17 @@
                         </div>
                         <div class="row row-sm stats-container">
                             <div class="col-xs-12 col-sm-12 stat-col">
-                                <form id="file_upload" role="acttype" method="post" action="#" enctype="multipart/form-data">
+                                <form id="file_upload" role="acttype" method="post" action="#"
+                                      enctype="multipart/form-data">
                                     <fieldset class="form-group">
-                                        <label for="upload_input"><span class="glyphicon glyphicon-open"></span> Upload Your .csv File</label>
+                                        <label for="upload_input"><span class="glyphicon glyphicon-open"></span> Upload Your
+                                            .csv File</label>
                                         <input type="file" accept=".csv" class="btn btn-secondary" id="upload_input">
                                     </fieldset>
                                     <div class="btn-group">
-                                        <button id="bnt_explore" class="btn btn-success btn-left"><span class="glyphicon glyphicon-search" aria-hidden="true"></span> Explore </button>
+                                        <button id="bnt_explore" class="btn btn-success btn-left"><span
+                                                class="glyphicon glyphicon-search" aria-hidden="true"></span> Explore
+                                        </button>
                                     </div>
                                 </form>
                             </div>
@@ -73,4 +78,5 @@
             </div>
         </div>
     </section>
+</article>
 {% endblock %}
