--- a/views/templates/elements/_modal_media.html
+++ b/views/templates/elements/_modal_media.html
@@ -6,19 +6,19 @@
                     <span aria-hidden="true">&times;</span>
                     <span class="sr-only">Close</span>
                 </button>
-                <h4 class="modal-title">Media Library</h4>
+                <h4 class="modal-title">Data Inventory</h4>
             </div>
             <div class="modal-body modal-tab-container">
                 <ul class="nav nav-tabs modal-tabs" role="tablist">
                     <li class="nav-item">
-                        <a class="nav-link" href="#gallery" data-toggle="tab" role="tab">Gallery</a>
+                        <a class="nav-link" href="#datalist" data-toggle="tab" role="tab">Data list</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link active" href="#upload" data-toggle="tab" role="tab">Upload</a>
                     </li>
                 </ul>
                 <div class="tab-content modal-tab-content">
-                    <div class="tab-pane fade" id="gallery" role="tabpanel">
+                    <div class="tab-pane fade" id="datalist" role="tabpanel">
                         <div class="images-container">
                             <div class="row"> </div>
                         </div>
@@ -26,7 +26,7 @@
                     <div class="tab-pane fade active in" id="upload" role="tabpanel">
                         <div class="upload-container">
                             <div id="dropzone">
-                                <form action="/" method="POST" enctype="multipart/form-data" class="dropzone needsclick dz-clickable" id="demo-upload">
+                                <form action="/inventory/upload" method="POST" enctype="multipart/form-data" class="dropzone needsclick dz-clickable" id="form-file-upload">
                                     <div class="dz-message-block">
                                         <div class="dz-message needsclick"> Drop files here or click to upload. </div>
                                     </div>
@@ -38,7 +38,7 @@
             </div>
             <div class="modal-footer">
                 <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-                <button type="button" class="btn btn-primary">Insert Selected</button>
+                <button type="button" class="btn btn-primary">Upload Selected</button>
             </div>
         </div>
         <!-- /.modal-content -->
