- fix issues of navbar active status problem

--- a/views/templates/BayesNet/index.html
+++ b/views/templates/BayesNet/index.html
@@ -1,4 +1,6 @@
 {% extends "base.html" %}
+{% set navlink_l1 = 'apps' %}
+{% set navlink_l2 = 'Bayes Net' %}
 {% block head %}
 {% include "elements/_head.html" %}
 <script src="http://code.jquery.com/jquery-2.0.3.min.js"></script>
