--- a/views/templates/InventoryManager/datalist.html
+++ b/views/templates/InventoryManager/datalist.html
@@ -1,4 +1,6 @@
 {% extends "base.html" %}
+{% set navlink_l1 = 'inventory' %}
+{% set navlink_l2 = 'datasets' %}
 {% block head %}
     {% include "elements/_head.html" %}
 {% endblock %}
