--- a/views/templates/base.html
+++ b/views/templates/base.html
@@ -46,5 +46,7 @@
         </div>
         <script src="js/vendor.js"></script>
         <script src="js/app.js"></script>
+        <!-- User defined JS -->
+        <script src="js/common.js"></script>
     </body>
 </html>
